Se mando llamar a la api con un useEfect y fetchmetodo then para que la respuesta fuera retornada en formato json, en candidato.jsx mediante el prop 'valor' se pasaron los datos de los usuarios como su img su nombre, su correo y su numero telefonico es importado, se importa este archivo a Listado para que estos datos sean recorridos por el map de forma dinamica, se integran estilos css a a cada uno de los candidatos para que sean colocados en un div donde la informacion sea distribuida en cada uno de los divs ordenadamente, se crean 2 botones 'ocultar' y guardar'

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,39 @@
 body{
+  font-family: "Montserrat", sans-serif;
   background-color: aliceblue;
+}
+img{
+  width: 100%;
+  vertical-align: top;
+}
+a{
+  font-size: 0.8rem;
+}
+.presentacion{
+  margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap; /*Si no cabe en una fina que tome las que sean necesarias*/
+  justify-content: space-between; /* Se ajuste a nivel horizontal*/
+}
+.usuario{
+  display: flex;
+  align-items: center;
+  padding: 10px 15px;
+  border-radius: 4px;
+  border: 1px dotted black;
+  box-sizing: border-box;
+  width: 49.5%;
+}
+.foto{
+  border: 1px solid gray;
+  border-radius: 5px;
+  overflow: hidden; /*Esquinas de las fotos de vean redondeadas*/
+  margin-right: 20px;
+  width: 170px;
+}
+.datos{
+  flex: 1;
+}
+.botones{
+width: 110px;
 }
